# atk-youtube

./: .gitignore  University_of_cambridge.html  pyproject.toml  test.py  test_3.html  vikram.html  vikram_3.html
aganitha_youtube_transcriber/: .gitignore
aganitha_youtube_transcriber/atk_youtube_transcript/: chapters_style.css  main.py  plain_style.css  prompt.py  test.py  transcript.py  utils.py
atk_youtube_transcript/: chapters_style.css  config.yaml  data_parser.py  main.py  plain_style.css  prompt.py  punctuated.txt  style.css  test.txt  test_1.txt  test_2.txt  test_3.txt  test_4.html  test_5.html  test_6.html  test_chapters.txt  test_chapters_1.html  test_chapters_2.html  tmp.txt  tmp2.txt  transcript.py  transcription_service.py  utils.py  youtube.ipynb  youtube.py  youtube_chapter.ipynb
atk_youtube_transcript/Deep_learning_protein/: Deep_learning_protein.txt  Deep_learning_protein_processed
atk_youtube_transcript/RFdiffusion/: RFdiffusion.txt  RFdiffusion_processed
tests/: html_Parser_test.py
