[tool.poetry]
name = "atk-youtube-transcript"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "atk_youtube_transcript"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
typer = "^0.7.0"
langchain = "^0.0.123"
youtube-transcript-api = "^0.5.0"

[tool.poetry.scripts]
atk-youtube-transcript = "atk_youtube_transcript.transcript:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
