[tool.poetry]
name = "atk-youtube-transcript"
version = "0.2.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "atk_youtube_transcript"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
typer = "^0.7.0"
langchain = "0.0.123"
youtube-transcript-api = "^0.5.0"
pytube = "^12.1.3"
numba = "^0.56.4"
ffmpeg-python = "^0.2.0"
pyyaml = "^6.0"


[tool.poetry.scripts]
atk-youtube-transcript = "atk_youtube_transcript.main:main"

[[tool.poetry.source]]
name = "dev"
url = "https://dev-pypi.aganitha.ai"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
